+spacing corrections and placement of pizza in box done

--- a/components/PizzaMaker/_PizzaMaker.scss
+++ b/components/PizzaMaker/_PizzaMaker.scss
@@ -7,39 +7,13 @@
     max-width: rem(618);
     // justify-content: center;
 
-    &__hide{
-        display:none;
-    }
-
-    &__make-pizza--button{
-        margin-bottom: 170px;
-        margin-top: 50px;
-        padding: 20px;
-        color: white;
-        background-color: $green;
-        border:none;
-        border-radius: 80px;
-        font-size: 20px;
-
-        &.disabled{
-            background-color: lightgray;
-        }
-    }
-
-    &__make-pizza--edit-button{
-        margin-bottom: 170px;
-        margin-top: 50px;
-        padding: 20px;
-        color: white;
-        background-color: $burgundy;
-        border:none;
-        border-radius: 80px;
-        font-size: 20px;
-    }
-
     @media only screen and ($tablet) {
         margin-left: auto;
         margin-right: auto;
+    }
+
+    &__hide{
+        display:none;
     }
 
     &__steps{
@@ -47,6 +21,14 @@
 
         @media only screen and ($tablet) {
             width: 50%;
+        }
+    }
+
+    &__step-container{
+        margin-bottom: rem(40);
+
+        @media only screen and ($tablet) {
+            margin-bottom: rem(70);
         }
     }
 
@@ -117,6 +99,71 @@
     &__size-large{
         width: rem(82);
         height: rem(82);
+    }
+
+    &__make-pizza--button{
+        margin-bottom: rem(170);
+        padding: rem(15);
+        color: white;
+        background-color: $green;
+        border:none;
+        border-radius: rem(80);
+        font-size: rem(14);
+
+        @media only screen and ($tablet){
+            margin-top: rem(30);
+            font-size: rem(16);
+            margin-left: rem(20);
+        }
+        &.disabled{
+            background-color: lightgray;
+        }
+    }
+
+    &__make-pizza--edit-button{
+        margin-bottom: rem(170);
+        margin-top: rem(10);
+        padding: rem(10);
+        color: white;
+        background-color: $burgundy;
+        border:none;
+        border-radius: rem(80);
+        font-size: rem(12);
+        margin-right: rem(10);
+        margin-left: rem(10);
+        display:block;
+        margin-left: auto;
+        margin-right: auto;
+
+    }
+
+    &__your_order{
+       font-size: rem(14);
+       font-weight: 700;
+        color: $green;
+        padding: 0 rem(10);
+        margin-top: 0;
+        text-align: center;
+        margin-left: rem(10);
+        margin-right: rem(10);
+
+       @media only screen and ($tablet){
+            font-size: rem(16);
+            margin-left: rem(20);
+            margin-right: rem(20);
+       }
+    }
+
+    &__next_steps{
+        padding: 0 rem(10);
+        font-size: rem(9);
+        margin-top: rem(20);
+        text-align: center;
+
+        @media only screen and ($tablet){
+            margin-top: rem(70);
+            font-size: rem(12);
+        }
     }
 
 }
