--- a/components/ToppingsList/_ToppingsList.scss
+++ b/components/ToppingsList/_ToppingsList.scss
@@ -1,4 +1,8 @@
 .toppingsList{
+    &__container{
+        margin-left: rem(20);
+    }
+    
     &__list-title{
         font-size: rem(14);
         // bold
